--- a/MapTest/en.lproj/MainStoryboard.storyboard
+++ b/MapTest/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -102,24 +102,39 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Mf1-e5-NPQ">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="161" id="Gce-o1-TWT"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="おも"/>
+                                            <segment title="もえ"/>
+                                            <segment title="ちん"/>
+                                        </segments>
+                                        <color key="tintColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="segChanged:" destination="Nli-cM-FFg" eventType="valueChanged" id="5YC-MW-wT8"/>
+                                        </connections>
+                                    </segmentedControl>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="x37-4e-4J3" firstAttribute="top" secondItem="gD3-OL-lmQ" secondAttribute="top" constant="294" id="0MI-r0-Mj1"/>
                                     <constraint firstItem="l9z-dv-bhB" firstAttribute="leading" secondItem="gD3-OL-lmQ" secondAttribute="leading" constant="228" id="2BR-Iu-tDS"/>
                                     <constraint firstItem="8rU-DS-XAB" firstAttribute="top" secondItem="bHM-Iw-dDf" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="2WB-gW-w2Q"/>
-                                    <constraint firstItem="fOd-S2-iFd" firstAttribute="centerX" secondItem="bHM-Iw-dDf" secondAttribute="centerX" type="default" id="3u9-EQ-jv0"/>
-                                    <constraint firstItem="bHM-Iw-dDf" firstAttribute="top" secondItem="gD3-OL-lmQ" secondAttribute="top" constant="212" id="9JQ-pK-R9W"/>
-                                    <constraint firstItem="x37-4e-4J3" firstAttribute="top" secondItem="gD3-OL-lmQ" secondAttribute="top" constant="294" id="AJL-fl-e6f"/>
-                                    <constraint firstItem="ecz-ZA-RLL" firstAttribute="leading" secondItem="gD3-OL-lmQ" secondAttribute="leading" constant="27" id="BKg-U7-9Gz"/>
-                                    <constraint firstItem="ecz-ZA-RLL" firstAttribute="centerX" secondItem="8rU-DS-XAB" secondAttribute="centerX" type="default" id="HSK-dq-Gqt"/>
+                                    <constraint firstItem="8rU-DS-XAB" firstAttribute="leading" secondItem="ecz-ZA-RLL" secondAttribute="leading" type="default" id="3ej-cR-RkP"/>
+                                    <constraint firstItem="8rU-DS-XAB" firstAttribute="centerX" secondItem="TTA-H5-tiG" secondAttribute="centerX" type="default" id="9ub-Q3-WdS"/>
+                                    <constraint firstItem="8rU-DS-XAB" firstAttribute="leading" secondItem="gD3-OL-lmQ" secondAttribute="leading" constant="27" id="BqT-w4-rT7"/>
                                     <constraint firstItem="bHM-Iw-dDf" firstAttribute="centerX" secondItem="8rU-DS-XAB" secondAttribute="centerX" type="default" id="Kh3-SK-gn3"/>
                                     <constraint firstAttribute="bottom" secondItem="TTA-H5-tiG" secondAttribute="bottom" constant="6" id="NHp-Ax-tM3"/>
-                                    <constraint firstItem="ecz-ZA-RLL" firstAttribute="top" secondItem="x37-4e-4J3" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Rgk-K0-V55"/>
+                                    <constraint firstItem="ecz-ZA-RLL" firstAttribute="centerX" secondItem="x37-4e-4J3" secondAttribute="centerX" type="default" id="RJe-cC-KsH"/>
+                                    <constraint firstItem="fOd-S2-iFd" firstAttribute="centerX" secondItem="x37-4e-4J3" secondAttribute="centerX" type="default" id="X2i-DI-dP9"/>
                                     <constraint firstItem="TTA-H5-tiG" firstAttribute="top" secondItem="gD3-OL-lmQ" secondAttribute="top" constant="367" id="YCW-za-t9p"/>
-                                    <constraint firstItem="TTA-H5-tiG" firstAttribute="leading" secondItem="gD3-OL-lmQ" secondAttribute="leading" constant="37" id="gSX-dx-E4I"/>
-                                    <constraint firstItem="x37-4e-4J3" firstAttribute="centerX" secondItem="gD3-OL-lmQ" secondAttribute="centerX" type="default" id="hOE-m6-sDl"/>
-                                    <constraint firstItem="x37-4e-4J3" firstAttribute="leading" secondItem="gD3-OL-lmQ" secondAttribute="leading" constant="151" id="iiR-gt-HJ9"/>
-                                    <constraint firstAttribute="trailing" secondItem="ecz-ZA-RLL" secondAttribute="trailing" constant="37" id="jct-ex-xKd"/>
+                                    <constraint firstItem="Mf1-e5-NPQ" firstAttribute="top" secondItem="gD3-OL-lmQ" secondAttribute="top" constant="234" id="ZN0-Wd-7Iw"/>
+                                    <constraint firstItem="bHM-Iw-dDf" firstAttribute="top" secondItem="fOd-S2-iFd" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="dh6-86-CaD"/>
+                                    <constraint firstItem="ecz-ZA-RLL" firstAttribute="top" secondItem="x37-4e-4J3" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="fqM-zI-e1P"/>
+                                    <constraint firstItem="Mf1-e5-NPQ" firstAttribute="leading" secondItem="gD3-OL-lmQ" secondAttribute="leading" constant="151" id="leh-Ua-Px9"/>
                                     <constraint firstItem="TTA-H5-tiG" firstAttribute="baseline" secondItem="l9z-dv-bhB" secondAttribute="baseline" type="default" id="unS-Iv-FKw"/>
+                                    <constraint firstAttribute="trailing" secondItem="Mf1-e5-NPQ" secondAttribute="trailing" constant="32" id="vCD-aH-qck"/>
                                     <constraint firstItem="fOd-S2-iFd" firstAttribute="top" secondItem="gD3-OL-lmQ" secondAttribute="top" constant="20" symbolic="YES" type="default" id="vmk-R0-99W"/>
                                 </constraints>
                             </scrollView>
@@ -138,6 +153,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="GqO-T5-EkI" firstAttribute="bottom" secondItem="gD3-OL-lmQ" secondAttribute="top" type="default" id="Sbp-AP-V60"/>
+                            <constraint firstAttribute="trailing" secondItem="gD3-OL-lmQ" secondAttribute="trailing" constant="-24" id="bWm-cf-VJh"/>
                             <constraint firstItem="gD3-OL-lmQ" firstAttribute="leading" secondItem="72q-DV-oHf" secondAttribute="leading" type="default" id="d82-K8-aIg"/>
                             <constraint firstItem="GqO-T5-EkI" firstAttribute="trailing" secondItem="72q-DV-oHf" secondAttribute="trailing" type="default" id="gP9-5S-fGJ"/>
                             <constraint firstItem="GqO-T5-EkI" firstAttribute="leading" secondItem="72q-DV-oHf" secondAttribute="leading" type="default" id="nNr-sw-eKa"/>
@@ -151,6 +167,7 @@
                         <outlet property="cameraButton" destination="TTA-H5-tiG" id="Mho-oC-ajv"/>
                         <outlet property="descTF" destination="ecz-ZA-RLL" id="4K8-Bi-2eR"/>
                         <outlet property="pictureImage" destination="fOd-S2-iFd" id="JQp-zB-0Rx"/>
+                        <outlet property="sc" destination="Mf1-e5-NPQ" id="a8M-2U-jcP"/>
                         <outlet property="scrollView" destination="gD3-OL-lmQ" id="oIX-XT-8p9"/>
                         <outlet property="sendButton" destination="l9z-dv-bhB" id="SWg-xL-mYF"/>
                         <outlet property="titleTF" destination="8rU-DS-XAB" id="eHa-c1-Sye"/>
@@ -351,6 +368,50 @@
             <point key="canvasLocation" x="-235" y="-455"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="DetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="valueButton:"/>
+                <relationship kind="outlet" name="spotDesc" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="spotLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="spotPicture" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="MapTestViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapTestViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ShowSpotsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ShowSpotsViewController.h"/>
+        </class>
+        <class className="SpotDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SpotDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="descLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="spotNavi" candidateClass="UINavigationItem"/>
+                <relationship kind="outlet" name="spotPicture" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="createSpotViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/createSpotViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="segChanged:"/>
+                <relationship kind="action" name="sendDataToServer:"/>
+                <relationship kind="action" name="startCamera:"/>
+                <relationship kind="outlet" name="cameraButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="descTF" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="pictureImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="sc" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="sendButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="titleTF" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
