--- a/MapTest/en.lproj/MainStoryboard.storyboard
+++ b/MapTest/en.lproj/MainStoryboard.storyboard
@@ -117,6 +117,7 @@
                                     <constraint firstItem="v0w-iP-BXa" firstAttribute="baseline" secondItem="8rU-DS-XAB" secondAttribute="baseline" type="default" id="hMG-bq-TZI"/>
                                     <constraint firstItem="Bqh-8Z-nLs" firstAttribute="bottom" secondItem="gD3-OL-lmQ" secondAttribute="bottom" type="default" id="ibx-MG-RSN"/>
                                     <constraint firstItem="ecz-ZA-RLL" firstAttribute="leading" secondItem="8rU-DS-XAB" secondAttribute="leading" type="default" id="lJy-7d-6Fi"/>
+                                    <constraint firstItem="v0w-iP-BXa" firstAttribute="top" secondItem="8rU-DS-XAB" secondAttribute="top" type="default" id="ple-ib-Mj7"/>
                                     <constraint firstItem="Bqh-8Z-nLs" firstAttribute="centerX" secondItem="x37-4e-4J3" secondAttribute="centerX" type="default" id="rAd-Gh-hVB"/>
                                     <constraint firstItem="Bqh-8Z-nLs" firstAttribute="leading" secondItem="gD3-OL-lmQ" secondAttribute="leading" type="default" id="rxL-rV-JIW"/>
                                     <constraint firstItem="fOd-S2-iFd" firstAttribute="top" secondItem="gD3-OL-lmQ" secondAttribute="top" constant="20" symbolic="YES" type="default" id="vmk-R0-99W"/>
@@ -358,53 +359,6 @@
             <point key="canvasLocation" x="-235" y="-455"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="DetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="valueButton:"/>
-                <relationship kind="outlet" name="spotDesc" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="spotLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="spotPicture" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="valueLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="MapTestViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapTestViewController.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ShowSpotsViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ShowSpotsViewController.h"/>
-        </class>
-        <class className="SpotDetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SpotDetailViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="descLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="spotNavi" candidateClass="UINavigationItem"/>
-                <relationship kind="outlet" name="spotPicture" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="createSpotViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/createSpotViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="execCamera:"/>
-                <relationship kind="action" name="registerSpot:"/>
-                <relationship kind="action" name="segChanged:"/>
-                <relationship kind="action" name="sendDataToServer:"/>
-                <relationship kind="action" name="startCamera:"/>
-                <relationship kind="outlet" name="cameraButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="descTF" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="pictureImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="sc" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="sendButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="titleTF" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
